--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,23 @@
 {
-  "name": "force/arr",
+  "name": "flextype-components/arr",
   "keywords": ["array"],
+  "type": "library",
   "license": "MIT",
-  "homepage": "https://github.com/force-components/Arr/issues",
+  "homepage": "https://github.com/flextype-components/array",
   "description": "Simple Array Class",
   "authors": [
     {
         "name": "Sergey Romanenko",
-        "email": "awilum@msn.com"
+        "email": "awilum@yandex.ru"
     }
   ],
   "support": {
-    "issues": "https://github.com/force-components/Arr/issues"
-  },
-  "autoload": {
-    "files": [
-      "Arr.php"
-    ]
+    "issues": "https://github.com/flextype-components/array/issues"
   },
   "require": {
-    "php": ">=5.3.0"
+      "php": "^7.1.3"
+  },
+  "autoload": {
+      "psr-4": { "Flextype\\Component\\Arr\\": "" }
   }
 }
