--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "library",
   "license": "MIT",
   "homepage": "https://github.com/flextype-components/array",
-  "description": "Simple Array Class",
+  "description": "The Array Component contains methods that can be useful when working with arrays.",
   "authors": [
     {
         "name": "Sergey Romanenko",
