--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,37 @@
 {
-  "name": "flextype-components/arr",
-  "keywords": ["array", "helpers", "utility"],
-  "type": "library",
-  "license": "MIT",
-  "homepage": "https://github.com/flextype-components/arr",
-  "description": "The Array Component contains methods that can be useful when working with arrays.",
-  "authors": [
-    {
-        "name": "Sergey Romanenko",
-        "email": "awilum@yandex.ru"
+    "name": "flextype-components/arrays",
+    "description": "Arrays Component contains methods that can be useful when working with arrays.",
+    "license": "MIT",
+    "keywords": [
+        "ArrayDots", "array-dots", "array", "dot", "php-array", "php"
+    ],
+    "support": {
+      "source": "https://github.com/flextype-components/arrays",
+      "issues": "https://github.com/flextype-components/arrays/issues"
+    },
+    "authors": [
+        {
+            "name": "Sergey Romanenko",
+            "email": "sergey.romanenko@flextype.org",
+            "homepage": "https://github.com/Awilum"
+        }
+    ],
+    "require": {
+        "php": ">=7.2.0"
+    },
+    "config": {
+        "apcu-autoloader": true,
+        "optimize-autoloader": true,
+        "platform": {
+            "php": "7.2.0"
+        }
+    },
+    "autoload":{
+        "psr-4": {
+            "Flextype\\Component\\Arrays": "src/"
+        }
+    },
+    "require-dev": {
+        "doctrine/coding-standard": "7.0.2"
     }
-  ],
-  "support": {
-    "issues": "https://github.com/flextype-components/arr/issues"
-  },
-  "require": {
-      "php": "^7.1.3"
-  },
-  "autoload": {
-      "psr-4": { "Flextype\\Component\\Arr\\": "" }
-  }
 }
