--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
-composer.phar
+# Global
+.composer
 composer.lock
-vendor
+package-lock.json
+vendor/
+
+# OS Generated
+.DS_Store*
+ehthumbs.db
+Icon?
+Thumbs.db
+*.swp
+
+# phpstorm
+.idea/*
